# demeter_ml

./: .gitignore  FIXES_APPLIED.md  HYBRID_LOGIC.md  README.md  README_PIPELINE.md  hello.py  pyproject.toml  test_output.txt
src/: features.csv  kmeans_model.pkl
src/demeter_ml/: analysis.py  app.py  clustering.py  corn_classifier.py  documentation.md  features.py  grain_classifier.py  llm.py  main.py  processing.py
src/lambdas/processor/: index.py
src/lambdas/upload/: index.py
src/notebooks/: grain_analysis.ipynb  process.ipynb
terraform/: .terraform.lock.hcl  apigateway.tf  iam.tf  lambda.tf  main.tf  s3.tf  sqs.tf  variables.tf
tests/: test_pipeline.py
