[project]
name = "demeter-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openai>=2.8.1",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
]
